# career-twin

./: .env.example  CLAUDE.md  README.md  agent.py  app.py  context_loader.py  main.py  prompts.py  pyproject.toml  requirements.txt
me/: summary.md
tools/: __init__.py  smtp_tool.py
